service.yaml
apiVersion: v1
kind: Service
metadata:
  name: stateful-web
spec:
  selector:
    app: stateful-web
  ports:
    - port: 80
      targetPort: 80
