ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: stateful-web
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/auth-type: basic
    nginx.ingress.kubernetes.io/auth-secret: stateful-web-basic-auth
    nginx.ingress.kubernetes.io/auth-realm: "Authentication Required"
    nginx.ingress.kubernetes.io/server-snippet: |
      satisfy any;
      allow 192.168.1.0/24;
      deny all;
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
spec:
  ingressClassName: public
  tls:
    - hosts:
        - stateful.kennedn.com
      secretName: stateful-web-tls
  rules:
    - host: stateful.kennedn.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: stateful-web
                port:
                  number: 80
